# agent

./: .gitignore  FILE_REVIEW_REPORT.md  PUSH_TO_GITHUB.md  README.md  README_SHORTTERM.md  README_SHORTTERM_ADV_PLUS.md  docker-compose.yml  push_to_github.sh  setup_git.sh
Disaster/: BACKUP_INFO_20251105_195841.md  PROJECT_STRUCTURE.md  README.md  add_header_to_all_services.py  add_navigation_header_summary.md  energy-orchestrator-platform.pem  final_status_check.sh  fix_nginx_assets.py  fix_nginx_co_workon.py  navigation_header_summary.md  pyproject.toml  update_index.py  web_service.patch
Disaster/Guide/: README_시작가이드.md  프로젝트_구조_및_Quick_Start.md  프로젝트_핵심요약.md  플랫폼_개발_가이드.md  핵심기능_구현_코드샘플.md
Disaster/assets_service/: add_header_to_templates.py  app.py  assets.db
Disaster/data/: sample_transnational_event.json
Disaster/demand_analysis/: Dockerfile  README.md  analysis_summary.json  app.py  energy_agent.py  energy_agent_enhanced.py  energy_dashboard.html  energy_dashboard.html.backup  energy_dashboard.html.backup2  processed_energy_data.csv  requirements.txt
Disaster/digitaltwin_matching/: Dockerfile  README.md  advanced_scenarios.py  app.py  dashboard.html  requirements.txt  smart_grid_digital_twin.py
Disaster/disaster_p/: app.py  disaster-response-complete_1.html
Disaster/energy-orchestrator-platform/: .gitignore  CODE_REVIEW.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_NOW.md  DIGITALTWIN_INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.md  MOCK_DATA_GUIDE.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  SUPPLY_INTEGRATION_GUIDE.md  (+10 more)
(+400 files in other folders)
